# demi

./: Cargo.toml
dl/: Cargo.toml
dl-sys/: Cargo.toml
dl-sys/src/: lib.rs
dl/src/: lib.rs
platform/dl-sys/src/: lib.rs
platform/dl-sys/tests/: dlapi.rs
platform/dl/src/: lib.rs
platform/vk/: Cargo.toml
platform/vk-sys/: Cargo.toml
platform/wl-sys/: Cargo.toml
platform/wlc-sys/: Cargo.toml
src/: animation.rs  bit_vec.rs  drawable.rs  gpu.rs  lib.rs  light.rs  linear.rs  main.rs  material.rs  mesh.rs  node.rs  renderer.rs  sampler.rs  scene.rs  shape.rs  skin.rs  texture.rs  transform.rs  var_buf.rs
src/gpu/: layout.rs  tests.rs  vk.rs
src/linear/: matn.rs  quat.rs  tests.rs  vecn.rs
src/node/: tests.rs
src/scene/: tests.rs
src/shape/: tests.rs
src/transform/: tests.rs
sys/dl/: Cargo.toml
sys/vk-sys/: Cargo.toml
vk-sys/: Cargo.toml
vk-sys/src/: core.rs  features.rs  format.rs  init.rs  lib.rs  limits.rs  result.rs  stype.rs  wsi.rs
vk-sys/tests/: draw.rs  init.rs
wlc-sys/: Cargo.toml
wlc-sys/src/: lib.rs
wlc-sys/tests/: client.rs
wlcli-sys/: Cargo.toml
wlcli-sys/src/: lib.rs  wl.rs  xdg.rs
wlcli-sys/tests/: client.rs
xgpu/: Cargo.toml
xgpu/src/: adapter.rs  binding.rs  buffer.rs  command.rs  device.rs  error.rs  internal.rs  lib.rs  pipeline.rs  query.rs  queue.rs  sampler.rs  shader.rs  texture.rs
xgpu/src/internal/: adapter.rs  binding.rs  buffer.rs  command.rs  device.rs  null.rs  pipeline.rs  query.rs  queue.rs  sampler.rs  shader.rs  texture.rs  vk.rs
xgpu/src/internal/vk/: adapter.rs
xgpu/tests/: render.rs
(+54 files in other folders)
