[package]
name = "demi"
version = "0.1.0"
edition = "2021"

[dependencies]
vk.workspace = true
vk-sys.workspace = true #TODO: Remove.

[workspace]
members = ["xgpu"]

[workspace.dependencies]
dl-sys = { path = "platform/dl-sys" }
dl = { path = "platform/dl" }
vk-sys = { path = "platform/vk-sys" }
vk = { path = "platform/vk" }
wl-sys = { path = "platform/wl-sys" }
