[package]
name = "demi"
version = "0.1.0"
edition = "2021"

[dependencies]
vk.workspace = true
vk-sys.workspace = true #TODO: Remove.

[workspace]
members = ["xgpu"]

[workspace.dependencies]
dl-sys = { path = "sys/dl-sys" }
dl = { path = "sys/dl" }
vk-sys = { path = "sys/vk-sys" }
vk = { path = "sys/vk" }
wl-sys = { path = "sys/wl-sys" }
