[package]
name = "xgpu"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(any(target_os = "linux", windows))'.dependencies]
vk.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wl-sys.workspace = true #TODO: Should be a wrapper.

[target.'cfg(windows)'.dependencies]
# TODO
